# canonia

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: README.md  audit-2026-07.md  configuring.md  deploying.md  evaluation.md  faq.md  importing.md  indexing.md  installing.md  lifecycle.md  maintaining.md  performance.md  releasing.md  serving.md  using-with-agents.md
evals/: README.md
evals/harness/: __main__.py  claude_cli.py  probe.py  report.py  runner.py  score.py  tasks.py  workspace.py
src/canonia/: __init__.py  access.py  cli.py  config.py  graph.py  index.py  markdown.py  markdown_html.py  schema.py  server.py  site.py
src/canonia/importer/: __init__.py  curated.py  mapping.py  plan.py  sources.py  zeroconfig.py
tests/: test_backend.py  test_cli.py  test_core.py  test_importer.py  test_index.py  test_server.py  test_site.py
