[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canonia"
version = "0.1.0.dev0"
description = "A git-backed, MCP-served knowledge graph for AI coding agents."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "André Lopes", email = "andre.luis.lopes81@gmail.com" }]
keywords = ["mcp", "knowledge-graph", "ai", "agents", "documentation"]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
# Heavier, feature-specific deps land here so the base install stays lean.
# `semantic` powers the embedding index (local ONNX MiniLM + brute-force NumPy
# cosine over a stdlib-sqlite vector store); everything degrades to keyword
# search without it. Needs no `sqlite-vec` — that backend is a future seam.
semantic = ["numpy>=1.21", "onnxruntime>=1.15"]
dev = [
    "pytest>=7", "numpy>=1.21", "onnxruntime>=1.15",
    "ruff>=0.6", "mypy>=1.8", "types-PyYAML",
]

[project.scripts]
canonia = "canonia.cli:main"

[project.urls]
Homepage = "https://github.com/canonia/canonia"
Repository = "https://github.com/canonia/canonia"
Issues = "https://github.com/canonia/canonia/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py39"          # keep suggestions within the 3.9 floor
line-length = 100

[tool.ruff.lint]
# E/F = pycodestyle+pyflakes, I = import sort, W = warnings, B = bugbear.
# E501 (line length) is left to human judgment — the codebase uses deliberate
# alignment we don't want a linter reflowing. UP (pyupgrade) is deliberately
# omitted: it would rewrite List->list / Optional->| en masse, which is risky
# against the 3.9 floor — a separate migration if/when the floor rises.
select = ["E", "F", "I", "W", "B"]
ignore = ["E501"]

[tool.mypy]
# No python_version pin: mypy follows the running interpreter. Pinning 3.9 makes
# recent mypy choke parsing numpy 2.x's 3.12-syntax stubs (and newer mypy refuses
# to target 3.9 at all). The 3.9 floor is guarded elsewhere — ruff's
# target-version = py39 and the py3.9 pytest job.
files = ["src/canonia"]
# Pragmatic gate: catch real type errors without demanding exhaustive
# annotations. Untyped function bodies are skipped by default (no strict mode).
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
